--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@ pnpm-debug.log*
 .env
 .env.local
 .env.*.local
+
+# valaxy fuse
+public/valaxy-fuse-list.json
+
+# valaxy rss
+public/feed.xml
+
+# valaxy rss
+public/atom.xml
+
+# valaxy rss
+public/feed.json
